# tesserae-modico

./: .gitignore  LICENSE  README.md  evaluate.py  filetype_groups.json  infer.py  pyproject.toml  requirements.txt  train.py  train_baseline.py
baselines/: __init__.py  byteformer.py  bytercnn.py  cnn_lstm.py  dscse.py  fifty.py  sift.py
data/: __init__.py  dataset.py  samplers.py
modico/: __init__.py  classifier.py  context.py  distribution.py  fusion.py  motif.py
