[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tesserae-modico"
version = "0.1.0"
description = "Tesserae and MoDiCo: a billion-fragment dataset and multi-branch architecture for file fragment classification."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
readme = "README.md"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "tqdm>=4.65",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
hf = ["huggingface_hub>=0.20"]
wandb = ["wandb>=0.15"]
baselines = ["timm>=0.9"]

[tool.setuptools]
packages = ["modico", "data", "baselines"]
